[package]
name = "tech_fest_proxy"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide={git = "https://github.com/rustasync/tide"}
surf = "1.0.2"
serde_json = "1.0.40"
